Fix spacing, font size issues

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -38,6 +38,7 @@ body {
 
 fieldset {
   border: 0;
+  padding: 0;
 }
 
 label {
@@ -61,6 +62,10 @@ label {
 
 .loading .spinner {
   display: block;
+}
+
+.add_fields {
+  font-size: 12px;
 }
 
 #footer {
