--- a/app/assets/stylesheets/venues.scss
+++ b/app/assets/stylesheets/venues.scss
@@ -82,3 +82,8 @@
   font-weight: bold;
   padding: 0;
 }
+
+.option_fields {
+  font-size: 13px;
+  padding: 10px 0;
+}
